Fix submit button z-index

--- a/client/landing/stepper/declarative-flow/internals/steps-repository/newsletter-setup/style.scss
+++ b/client/landing/stepper/declarative-flow/internals/steps-repository/newsletter-setup/style.scss
@@ -94,6 +94,7 @@ $border-radius: 4px;
 		}
 
 		.newsletter-setup__contrast-warning {
+			z-index: 1;
 			display: flex;
 			font-size: $font-body-small;
 			height: 0;
@@ -118,6 +119,7 @@ $border-radius: 4px;
 
 		.newsletter-setup__submit-button {
 			border-radius: $border-radius;
+			z-index: 2;
 		}
 	}
 }
